--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-data-table-component": "^7.4.5",
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "16.11.12",
+    "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
+    "eslint": "7.32.0",
+    "eslint-config-next": "12.0.4",
     "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.1",
-    "typescript": "4.5.3"
+    "tailwindcss": "^2.2.19",
+    "typescript": "4.5.2"
   }
 }
