--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marduk-admin-frontend",
+  "name": "lnstxbridge-dashboard",
   "private": true,
   "scripts": {
     "dev": "next dev",
