--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rjsf/core": "^4.0.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-data-table-component": "^7.4.6",
