--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
     "@rjsf/core": "^4.0.1",
+    "@rjsf/material-ui": "^4.0.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-data-table-component": "^7.4.6",
