--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "buildandstart": "next build && next start"
   },
   "dependencies": {
     "@emotion/react": "^11.8.1",
