--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,11 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+
+      - name: Get current package version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@v1.1.0
+
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -39,4 +44,4 @@ jobs:
           push: true
           tags: |
             pseudozach/lnstxbridge-dashboard:latest
-            pseudozach/lnstxbridge-dashboard:${{ steps.date.outputs.date }}
+            pseudozach/lnstxbridge-dashboard:${{ steps.package-version.outputs.current-version }}
