--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next telemetry disable && next build",
     "start": "next start",
     "lint": "next lint",
     "buildandstart": "next build && next start"
@@ -18,10 +18,11 @@
     "@mui/material": "^5.4.4",
     "@rjsf/core": "^4.0.1",
     "@rjsf/material-ui": "^4.0.1",
-    "next": "12.0.7",
-    "react": "17.0.2",
+    "next": "^13.0.2",
+    "react": "^18.2.0",
     "react-data-table-component": "^7.4.6",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.31.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -29,7 +30,7 @@
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4",
+    "eslint-config-next": "^13.0.2",
     "postcss": "^8.4.4",
     "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
