--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mui/material": "^5.4.4",
     "@rjsf/core": "^4.0.1",
     "@rjsf/material-ui": "^4.0.1",
+    "@stacks/transactions": "^6.7.0",
+    "axios": "^1.5.0",
+    "limiter": "^2.1.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-data-table-component": "^7.4.6",
